# rust-ipc

./: .gitignore  Makefile  test-protobuf.sh
cpp-protobuf/: main.cpp
protobuf/: arithmetic.proto
rust-protobuf/: Cargo.toml  build.rs
rust-protobuf/src/: main.rs
rust-protobuf/src/protos/: mod.rs
serde-file-descriptor-ipc-example/: Cargo.toml
serde-file-descriptor-ipc-example/src/: main.rs
