[package]
name = "rust-protobuf"
version = "0.1.0"
authors = ["Walter Smuts <wssmts@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"
mio = { version = "0.7", features = ["os-poll", "uds"] }
slab = "0.4"
nix = "0.17"
ctrlc = "3.1.7"

[build-dependencies]
protoc-rust = "2.0"
